NOTE: for more news about the package, see https://github.com/florianhartig/BayesianTools/releases

# BayesianTools 0.1.2 

Minor changes

Bugfixes

- bugfix in marginal plots (0.1.1.1)

# BayesianTools 0.1.1 

Mostly a bugfix release

Minor changes

- implemented method for estimating posterior volume (0.1.0.1)
- implemented GOF (0.1.0.2)

Bugfixes

- removed erroneously created help files (0.1.0.1)
- dynload change to conform to R 3.4.x requirements (0.1.1)
- smaller bugxfixes and help updates (0.1.1)

# BayesianTools 0.1.0 

- initial release